import java.text.NumberFormat;

public class Chance extends Field {

    public static CardDeck cardDeck;

    public Chance(int ID, String label) {
        super(ID, label, 0, 0);

    }
}
