@startuml
!pragma layout smetana

class Main{
+ static void main(String[] args)
}




class Game{
 - String name
 - ArrayList<Player> players
 - Player currentPlayer
 - CardDeck cardDeck
 - Board board
 - Dice dice
 'utilities
  - String playerDataPath
  - TextUI ui
  - FileIO io
  'Contructor
 + Game(String name)
 'Methods
 - void startSession()
 - void createPlayer(String name, int balance)
 - void displayPlayers()
  - void loadPlayerData()
 - void registerPlayers()
 + void runGameLoop()
 - void throwAndMove()
 - void landAndAct()
 - void endGame()

}

class Player{
- String name
- Account account
- ArrayList<Field> deeds
+ Player(String name, int startAmount)
+ int updatePosition(int value)
- boolean startPassed()
+ boolean buyProperty(Field f)
+ boolean pay(int amount)
+ boolean pay(int amount, Player recipient)
+ void collect(int amount)
+ void recieve(int amount)
+ String toString()
+ String getName()
+ int getBalance()
}
class Account{
- int balance
+ void deposit(int amount)
+ boolean withdraw(int amount)
+ int getBalance()
}

class Field{
- String label
 - int ID
 - int cost
 - int income
 - String option
 + Field(int ID, String label, int cost, int income)
 + String toString()
 + String onLand(Player p)
 + String onAccept(Player p)
 + String onReject(Player p)
}
class Board{
 - Field[] fields
 + Board(String [] fielddata, String [] carddata)
'konstruktoren instansierer CardDeck med carddata som argument og tildeler til Chance.cardDeck
 - void createFields(String [] data)
 + Field getField(int id)

}
class Property extends Field{
 - Player owner
 - int seriesID
 - boolean isMonopolized
 + Property(int ID, String label, int cost, int income, int seriesID)
}

class Chance extends Field{
 - {static} CardDeck cardDeck
 + Chance(int ID, String label)
}
class CardDeck {
- Card[] cards
- int counter
+ CardDeck(String[] carddata)
+ Card getNext()
+ void createCards(String[] data)
}
class Card{
-String message
-int income
-int cost
-String event
+Card(String message, int income, int cost, String event)
+String toString()
+ int getCost()
+ int getIncome()
+ String getEvent()
+ String getMessage()
}

class Dice{
 - boolean isDouble
 +int rollDiceSum()
 +boolean getIsDouble()
 }
package "util" {
class TextUI {
- Scanner scan
+ boolean promptBinary(String msg)
+ String promptText(String msg)
+ int promptNumeric(String msg)
+ ArrayList<String> promptChoice(ArrayList<String> options, int limit, String msg)
+ void displayMessage(String msg)
+ void displayList(ArrayList<String> list, String msg)
}

class FileIO{
+ void saveData(ArrayList<String> data, String path, String header)
+ ArrayList<String> readData(String path)
+ String[] readData(String path, int length)
}

Game *-- TextUI
Main *-- Game
Game *-- Player: 2-6
Game *-- FileIO
Player *-- Account:1
Game *-- Board:1
Board *-- Field:40
Game *-- CardDeck:1
CardDeck *-- Card:100
Game *-- Dice
Player *-- Card
Player *-- Field

@enduml